--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="header flex w-full md:w-auto justify-between items-center py-4 px-0 dark:background-dark">
     <div class="logo-component hover:text-blue-500 text-accent cursor-pointer font-bold dark:text-primary
     text-base sm:text-lg md:text-xl lg:text-2xl tracking-tight">
-    <span class="hidden xs:inline">MO.Gharib</span>
-    <span class="inline xs:hidden text-black dark:text-primary" style="font-size: 10vw">MG</span>
+    <span class="hidden xs:inline logo-text">MO.Gharib</span>
+    <span class="logo-text inline xs:hidden text-black dark:text-primary font-bold">MG</span>
 </div>
     <input type="checkbox" id="menu-toggle" class="menu-toggle hidden" />
     <label for="menu-toggle" id="menu-toggle" class="custom-hamburger hidden">
