--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,9 @@
       <app-header></app-header>
     </div>
   </div>
-  <div class="introduction col-span-1 md:col-span-12">
-    <div class="max-w-3xl mx-auto p-4">
-      <h2>Introduction</h2>
-      <p>Welcome to my portfolio! I am a passionate web developer with a love for creating beautiful and functional websites.</p>
+  <div class="introduction col-span-1 md:col-span-12 row-span-3">
+    <div class="max-w-3xl mx-auto p-0">
+      <app-introduction></app-introduction>
     </div>
   </div>
   <div class="projects col-span-1 md:col-span-12">
