--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto w-full min-h-screen grid grid-cols-1 md:grid-cols-12 gap-4 grid-rows-5">
+<div class="container mx-auto w-full min-h-screen grid grid-cols-1 lg:grid-cols-12 gap-4">
   <div class="navigation col-span-1 md:col-span-12">
     <div class="max-w-3xl mx-auto p-4">
       <app-header></app-header>
@@ -9,17 +9,17 @@
       <app-introduction></app-introduction>
     </div>
   </div>
-  <div class="projects col-span-1 md:col-span-12">
-    <div class="max-w-3xl mx-auto p-4">
-      <h2>Projects</h2>
+  <div class="projects col-span-1 lg:col-span-12 mt-0 lg:mt-0">
+    <div class="max-w-3xl mx-auto p-0 ">
+      <app-projects></app-projects>
     </div>
   </div>
-  <div class="experiences col-span-1 md:col-span-12">
+  <div class="experiences col-span-1 lg:col-span-12">
     <div class="max-w-3xl mx-auto p-4">
       <h2>Experiences</h2>
     </div>
   </div>
-  <div class="contact col-span-1 md:col-span-12">
+  <div class="contact col-span-1 lg:col-span-12">
     <div class="max-w-3xl mx-auto p-4">
       <h2>Contact</h2>
     </div>
