experience section template created

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,1 +1,5 @@
-<p>experience works!</p>
+<section id="experience" class="max-w-3xl mx-auto p-4">
+    <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
+        <i class="pi pi-briefcase mr-2"></i>Experience</h2>
+    
+</section>
