--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,13 +1,14 @@
-<div class="flex flex-row items justify-between mb-4 ">
+<div class="flex flex-row items justify-between mb-4 ml-4 ">
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
         <i class="pi pi-folder mr-2"></i>Projects</h2>
+        
 </div>
 
 <!-- Wrapper div using Flexbox -->
 <section id="projects" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6"> 
     <!-- Added gap-6 for spacing between cards -->
     <!-- Card Container 1 -->
-    <div class="bg-black rounded-xl p-0 max-w-md w-full "> 
+    <div class="bg-black rounded-xl p-4 max-w-md w-full "> 
         <!-- Removed max-w-md if you want them to potentially grow, or adjust as needed -->
         <!-- Image -->
         <img src="https://images.unsplash.com/photo-1516018648631-0a79b7ea609c?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -36,7 +37,7 @@
     </div>
 
     <!-- Card Container 2 -->
-    <div class="bg-black rounded-xl p-0 max-w-md w-full "> 
+    <div class="bg-black rounded-xl p-4 max-w-md w-full "> 
         <!-- Removed max-w-md if you want them to potentially grow, or adjust as needed -->
         <!-- Image -->
         <img src="https://images.unsplash.com/photo-1516018648631-0a79b7ea609c?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -65,7 +66,7 @@
     </div>
 
      <!-- Card Container 3 -->
-     <div class="bg-black rounded-xl p-0 max-w-md w-full "> 
+     <div class="bg-black rounded-xl p-4 max-w-md w-full "> 
         <!-- Removed max-w-md if you want them to potentially grow, or adjust as needed -->
         <!-- Image -->
         <img src="https://images.unsplash.com/photo-1516018648631-0a79b7ea609c?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -93,7 +94,7 @@
         </div>
     </div>
      <!-- Card Container 4 -->
-     <div class="bg-black rounded-xl p-0 max-w-md w-full "> 
+     <div class="bg-black rounded-xl p-4 max-w-md w-full "> 
         <!-- Removed max-w-md if you want them to potentially grow, or adjust as needed -->
         <!-- Image -->
         <img src="https://images.unsplash.com/photo-1516018648631-0a79b7ea609c?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
