smooth grid card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
     </div>
   </div>
   <div class="experiences col-span-1 lg:col-span-12">
-    <div class="max-w-3xl mx-auto p-4">
-      <h2>Experiences</h2>
+    <div class="max-w-3xl mx-auto p-0">
+      <app-experience></app-experience>
     </div>
   </div>
   <div class="contact col-span-1 lg:col-span-12">
