--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,10 +11,10 @@
         <span class="bar bg-background-dark! dark:bg-primary!"></span>
     </label>
     <ul class="menu md:flex flex-col md:flex-row items-center justify-between gap-4 text-foreground">
-        <li><a href="#about" class="hover:text-blue-500 hover:font-bold font-inter not:italic">About</a></li>
-        <li><a href="#projects" class="hover:text-blue-500 hover:font-bold font-inter not:italic">Projects</a></li>
-        <li><a href="#experience" class="hover:text-blue-500 hover:font-bold font-inter not:italic">Experience</a></li>
-        <li><a href="#contact" class="hover:text-blue-500 hover:font-bold font-inter not:italic">Contact</a></li>
+        <li><a href="#about" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{ 'navbar.home' | translate }}</a></li>
+        <li><a href="#projects" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.projects' | translate}}</a></li>
+        <li><a href="#experience" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.experiences' | translate}}</a></li>
+        <li><a href="#contact" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.contact' | translate}}</a></li>
     </ul>
     <div class="social-icons flex flex-row justify-between items-center cursor-pointer">
         <!-- Show sun icon in dark mode -->
