--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -1,6 +1,6 @@
 <section id="about" class="max-w-3xl mx-auto p-4">
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
-        <i class="pi pi-user mr-2"></i>Introduction</h2>
+        <i class="pi pi-user mr-2"></i>Mahmoud Gharib</h2>
     <p class="font-inter not-italic font-normal md:text-justify leading-relaxed text-left">
         Versatile Full-Stack Developer with 2+ years of experience building scalable 
         solutions across TypeScript, Python, and PHP ecosystems. 
