introduction component modified

--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -2,14 +2,6 @@
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
         <i class="pi pi-user mr-2"></i>Mahmoud Gharib</h2>
     <p class="font-inter not-italic font-normal md:text-justify leading-relaxed text-left">
-        Versatile Full-Stack Developer with 2+ years of experience building scalable 
-        solutions across TypeScript, Python, and PHP ecosystems. 
-        Skilled in NestJS, Django, and Symfony, with a focus on  backend APIs, 
-        data-driven applications, and cross-platform web development. 
-        Proven success in optimizing API performance by 40% through query optimization, 
-        reducing server costs by 30% via Python automation  scripts, 
-        and delivering 3+ production-grade apps with 95% client  satisfaction. 
-        Adept at designing RESTful microservices, integrating  third-party APIs, 
-        and maintaining robust CI/CD pipelines with Docker and AWS.
+       {{ 'about.intro' | translate:aboutMe }}
     </p>
   </section>
