project title integrated with ng service

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-row items justify-between mb-4 ml-2 ">
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
-        <i class="pi pi-folder mr-2"></i>Projects</h2>
+        <i class="pi pi-folder mr-2"></i>{{'projects.title' |translate:pageSection}}</h2>
         
 </div>
 
