--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,5 +1,5 @@
 <section id="experience" class="max-w-3xl mx-auto p-0 ml-2 mt-5">
-    <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
-        <i class="pi pi-briefcase mr-2"></i>Experience</h2>
-    
+    <h2 class="text-lg font-bold mb-4 text-black dark:text-primary" >
+        <i class="pi pi-briefcase mr-2"></i>{{'experiences.title' |translate:pageSection}}</h2>
+        <app-accordion></app-accordion>   
 </section>
