--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -1,7 +1,7 @@
   <div class="accordion">
   <div class="accordion-item">
     <h2>
-      <button class="accordion-trigger" aria-expanded="false" aria-controls="panel1" id="test-section-first">
+      <button class="accordion-trigger" aria-expanded="false" aria-controls="test-section-first" id="test-section-first">
         Section 1
       </button>
     </h2>
