--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -1,24 +1,14 @@
-  <div class="accordion">
+<div class="accordion">
   <div class="accordion-item">
     <h2>
-      <button class="accordion-trigger" aria-expanded="false" aria-controls="test-section-first" id="test-section-first" appAccordionTrigger>
+      <button class="accordion-trigger" aria-expanded="true" aria-controls="panel1" id="one" appAccordionTrigger>
         Section 1
       </button>
     </h2>
-    <div id="panel1" class="accordion-panel" role="region" aria-labelledby="test-section-first" hidden>
+    <div id="panel1" class="accordion-panel bg-background-dark" role="region" aria-labelledby="one" hidden >
       <p>Content for section 1...</p>
     </div>
   </div>
 
-  <div class="accordion-item">
-    <h2>
-      <button class="accordion-trigger" aria-expanded="false" aria-controls="panel2" id="test-section-second">
-        Section 2
-      </button>
-    </h2>
-    <div id="panel2" class="accordion-panel" role="region" aria-labelledby="test-section-second" hidden>
-      <p>Content for section 2...</p>
-    </div>
-  </div>
   <!-- More items -->
 </div>
