--- a/src/app/shared/accordion/accordion.component.css
+++ b/src/app/shared/accordion/accordion.component.css
@@ -9,7 +9,7 @@
   border-bottom: 1px solid #e1e1e1;
   min-height: 0;
   overflow: hidden;
-  transition: min-height 0.3s ease-in-out;
+  transition: min-height 0.3s ease;
 }
 
 .accordion-item:last-child {
