--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -1,11 +1,11 @@
 <div class="accordion">
   <div class="accordion-item">
     <h2>
-      <button class="accordion-trigger" aria-expanded="true" aria-controls="panel1" id="one" appAccordionTrigger>
+      <button class="accordion-trigger" aria-expanded="false" aria-controls="panel1" id="first-element" appAccordionTrigger>
         Section 1
       </button>
     </h2>
-    <div id="panel1" class="accordion-panel bg-background-dark" role="region" aria-labelledby="one" hidden >
+    <div id="panel1" class="accordion-panel bg-background-dark" role="region" aria-labelledby="fist-element" hidden  >
       <p>Content for section 1...</p>
     </div>
   </div>
