--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -1,14 +1,30 @@
-<div class="accordion">
+@for (experience of experiences ; track experience.id) {
+<div class="accordion mb-3 mx-0 lg:mx-0">
   <div class="accordion-item">
     <h2>
-      <button class="accordion-trigger" aria-expanded="false" aria-controls="panel1" id="first-element" appAccordionTrigger>
-        Section 1
+      <button class="accordion-trigger" aria-expanded="false" aria-controls="panel1" id="first-element"
+        appAccordionTrigger>
+        <div class="info flex justify-between items-center w-full">
+          <div class="company">
+            {{ experience.title }} at {{experience.company}}
+          </div>
+          <div class="date mr-2">
+            {{experience.start}}
+            @if (!experience.end) {
+            
+            } @else {
+               {{experience.end}}
+            }
+           
+          </div>
+        </div>
       </button>
     </h2>
-    <div id="panel1" class="accordion-panel bg-background-dark" role="region" aria-labelledby="fist-element" hidden  >
+    <div id="panel1" class="accordion-panel bg-background-dark" role="region" aria-labelledby="fist-element" hidden>
       <p>Content for section 1...</p>
     </div>
   </div>
 
   <!-- More items -->
 </div>
+}
