code refactory css

--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -1,5 +1,5 @@
 @for (experience of experiences ; track experience.id) {
-<div class="accordion mb-3 mx-0 lg:mx-0">
+<div class="accordion mb-3 mx-0 lg:mx-0 p-4 mt-5 lg:mt-10">
   <div class="accordion-item">
     <h2>
       <button class="accordion-trigger" aria-expanded="false" aria-controls="panel1" id="first-element"
