--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@
     --font-manrope: "Manrope", sans-serif;
     --font-optical-sizing: auto;
     --font-inter:"Inter", sans-serif;
+    --bg-dropdown: oklch(0.1941 0.0839 308)
 
 }
 
