--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -2,7 +2,7 @@
   <div class="w-full py-5">
   <!-- Accordion Item 1 -->
   <details class="group rounded-lg overflow-hidden shadow-sm bg-background-dark">
-    <summary class="flex items-center justify-between w-full p-5 font-bold bg-background-dark dark:bg-purple-900/55
+    <summary class="flex items-center justify-between w-full p-5 font-bold bg-background-dark dark:bg-dropdown
                           hover:bg-opacity-90 transition-colors duration-150">
       <span class="font-bold text-primary font-inter">{{experience.title}}</span>
       <span class="flex items-center justify-center w-7 h-7 shrink-0 text-icon-closed-symbol-color">
