--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,7 @@
     --font-manrope: "Manrope", sans-serif;
     --font-optical-sizing: auto;
     --font-inter:"Inter", sans-serif;
-    --bg-dropdown: oklch(0.1941 0.0839 308)
-
+    --color-dropdown: oklch(0.1733 0.0064 271.03);
 }
 
 .dark #menu-toggle:checked + .custom-hamburger + .menu { background-color: var(--color-background-dark) !important; }
