border bottom dropped

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header flex w-full md:w-auto justify-between items-center py-4 px-0 dark:background-dark border-b border-gray-700 ">
+<header class="header flex w-full md:w-auto justify-between items-center py-4 px-0 dark:background-dark">
     <div class="logo-component hover:text-blue-500 text-accent cursor-pointer font-bold dark:text-primary
     text-base sm:text-lg md:text-xl lg:text-2xl tracking-tight">
     <span class="hidden xs:inline logo-text">MO.Gharib</span>
