experience section modified and ready for n18

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <!-- Header Section -->
-<div class="flex flex-row justify-between items-center pb-6 mb-8">
+<div class="flex flex-row justify-between items-center mt-4 mb-6">
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary font-inter">
-        <i class="pi pi-folder mr-2 lg:mr-5"></i>{{'projects.title' |translate:pageSection}}
+        <i class="pi pi-folder mr-2 lg:mr-2"></i>{{'projects.title' |translate:pageSection}}
     </h2>
     <a href="#" class="text-gray-300 hover:text-white text-base flex items-center group">
         View all
