--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,25 @@
-<div class="container mx-auto w-full min-h-screen grid grid-cols-1gap-4">
-  <div class="navigation col-span-12">
+<div class="container mx-auto w-full min-h-screen">
+  <div class="navigation mb-8">
     <div class="max-w-3xl mx-auto p-4">
       <app-header></app-header>
     </div>
   </div>
-  <div class="introduction col-span-12">
+  <div class="introduction mb-8">
     <div class="max-w-3xl mx-auto p-0">
       <app-introduction></app-introduction>
     </div>
   </div>
-  <div class="projects col-span-12 mt-0 lg:mt-0">
-    <div class="max-w-3xl mx-auto p-2 ">
+  <div class="projects mb-8">
+    <div class="max-w-3xl mx-auto p-2">
       <app-projects></app-projects>
     </div>
   </div>
-  <div class="experiences col-span-12">
+  <div class="experiences mb-8">
     <div class="max-w-3xl mx-auto p-0">
       <app-experience></app-experience>
     </div>
   </div>
-  <div class="contact col-span-12">
+  <div class="contact mb-8">
     <div class="max-w-3xl mx-auto p-4">
       <h2>Contact</h2>
     </div>
