--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -1,17 +1,17 @@
 @for (experience of experiences ; track experience.id) {
-<div class="w-full py-2 mb-4 dark:border-1">
+<div class="w-full py-2 mb-4 dark:border-1" appAccordionTrigger >
   <!-- Accordion Item 1 -->
   <details class="group rounded-lg overflow-hidden shadow-sm bg-background-dark">
     <summary class="flex items-center justify-between w-full p-5 font-bold bg-background-dark
                           hover:bg-opacity-90 transition-colors duration-150">
-      <span class="font-bold text-primary font-inter">{{experience.title | translate: experience}} At
+      <span class="font-bold text-primary font-inter">{{experience.title | translate: experience}} 
        {{ experience?.company ?? '' | translate: experience }}</span>
       <span class="font-manrope not-italic font-normal md:text-justify leading-relaxed text-left px-2">
         @if(!experience.end){
         <span
-          class="font-manrope">Present</span>
+          class="font-inter">Present</span>
         }@else {
-        <span class="font-manrope">{{experience.start | translate: experience }} - {{experience.end  | translate: experience }}</span>
+        <span class="font-inter">{{experience.start | translate: experience }} - {{experience.end  | translate: experience }}</span>
         }
       </span>
       <span class="flex items-center justify-center w-7 h-7 shrink-0 text-icon-closed-symbol-color">
