language dropdown menu created but not finished yet

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,9 @@
     <li><a href="#projects" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.projects' | translate}}</a></li>
     <li><a href="#experience" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.experiences' | translate}}</a></li>
     <li><a href="#contact" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.contact' | translate}}</a></li>
+    <li><a href="#resume" class="hover:text-blue-500 hover:font-bold font-inter not:italic">
+      <app-languages></app-languages>
+    </a></li>
   </ul>
   <div class="social-icons flex flex-row justify-between items-center cursor-pointer">
     <!-- Show sun icon in dark mode -->
