polish intro finished

--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -2,6 +2,6 @@
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
         <i class="pi pi-user mr-2"></i>Mahmoud Gharib</h2>
     <p class="font-inter not-italic font-normal md:text-justify leading-relaxed text-left">
-       {{ 'about.intro' | translate:aboutMe }}
+       {{ 'about.intro' | translate:aboutObj }}
     </p>
   </section>
