fixed ugly flex layout

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,10 +1,10 @@
 <!-- Header Section -->
-<div class="flex flex-row justify-between items-center mt-4 mb-6">
-    <h2 class="text-lg font-bold mb-4 text-black dark:text-primary font-inter">
-        <i class="pi pi-folder mr-2 lg:mr-2"></i>{{'projects.title' |translate:pageSection}}
+<div class="flex flex-row w-full justify-between items-center mt-4 mb-6">
+    <h2 class="text-lg font-bold text-black dark:text-primary font-inter flex items-center">
+        <i class="pi pi-folder mr-2"></i>{{'projects.title' | translate:pageSection}}
     </h2>
-    <a href="#" class="text-gray-300 hover:text-white text-base flex items-center group">
-        View all
+    <a href="#" class="text-black dark:text-primary font-inter not-italic hover:text-blue-500 text-base flex items-center group">
+        {{'projects.view' | translate }}
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
             class="w-5 h-5 ml-1.5 transition-transform duration-200 ease-in-out group-hover:translate-x-1">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25" />
